# explain

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  claude_explain.md  pyproject.toml  test-explain.sh
.github/workflows/: build.yaml  test.yaml
app/: anthropic_api.py  cache.py  config.py  explain.py  explain_api.py  explain_test.py  explanation_types.py  main.py  metrics.py  model_costs.py  prompt.py  prompt.yaml  prompt.yaml.backup  test_cache.py  test_explain.py  test_model_costs.py
prompt_testing/: AUDIENCE_GUIDE.md  README.md  TODO_from_PR_review.md  WHATS_NEXT.md  __init__.py  __main__.py  cli.py  enricher.py  file_utils.py  reviewer.py  runner.py  test_cli_utils.py  test_enricher.py  test_file_utils.py  test_scorer.py  test_yaml_utils.py  web_review.py  yaml_utils.py
prompt_testing/ce_api/: __init__.py  client.py  integration_test.py  models.py  test_client.py
prompt_testing/evaluation/: __init__.py  claude_reviewer.py  prompt_advisor.py  review_templates.yaml  reviewer.py  scorer.py
prompt_testing/prompts/: current.yaml  haiku_4_5.yaml  v1_baseline.txt  v1_baseline.yaml  v2_baseline.yaml  v3.yaml  v4.yaml  v5.yaml  v6.yaml  v7.yaml  v7_sonnet.yaml  v8.yaml  v9.yaml
prompt_testing/templates/: index.html  review.html
prompt_testing/test_cases/: audience_variations.yaml  basic_optimizations.json  basic_optimizations.yaml  complex_transformations.json  complex_transformations.yaml  default_code.yaml  edge_cases.json  edge_cases.yaml  haiku_tests.yaml
